VariationHandling/JES_files/2016_preVFP/Histo_1000_TTTo2L2Nu_boostedShiftedUp.err
[8MB/455.7MB][  1%][>                                                 ][4MB/s]  [16MB/455.7MB][  3%][=>                                                ][5.333MB/s]  [32MB/455.7MB][  7%][===>                                              ][8MB/s]  [56MB/455.7MB][ 12%][======>                                           ][11.2MB/s]  [72MB/455.7MB][ 15%][=======>                                          ][12MB/s]  [96MB/455.7MB][ 21%][==========>                                       ][13.71MB/s]  [120MB/455.7MB][ 26%][=============>                                    ][15MB/s]  [144MB/455.7MB][ 31%][===============>                                  ][16MB/s]  [168MB/455.7MB][ 36%][==================>                               ][16.8MB/s]  [200MB/455.7MB][ 43%][=====================>                            ][18.18MB/s]  [224MB/455.7MB][ 49%][========================>                         ][18.67MB/s]  [248MB/455.7MB][ 54%][===========================>                      ][19.08MB/s]  [272MB/455.7MB][ 59%][=============================>                    ][19.43MB/s]  [296MB/455.7MB][ 64%][================================>                 ][19.73MB/s]  [328MB/455.7MB][ 71%][===================================>              ][20.5MB/s]  [352MB/455.7MB][ 77%][======================================>           ][20.71MB/s]  [376MB/455.7MB][ 82%][=========================================>        ][20.89MB/s]  [400MB/455.7MB][ 87%][===========================================>      ][21.05MB/s]  [424MB/455.7MB][ 93%][==============================================>   ][21.2MB/s]  [448MB/455.7MB][ 98%][=================================================>][21.33MB/s]  [455.7MB/455.7MB][100%][==================================================][21.7MB/s]  [455.7MB/455.7MB][100%][==================================================][21.7MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_2383/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_2383/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
